--- a/public/index.html
+++ b/public/index.html
@@ -16,12 +16,12 @@
   <!-- Latest compiled and minified CSS -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
     crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="/css/mega-nav.css"> <!-- Mega Nav Resource style -->
+    <link rel="stylesheet" href="/css/mega-nav.css"> <!--Mega Nav Resource style -->
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/float-label-css/1.0.2/float-label.css">
     <link rel="stylesheet" href="https://cdn.rawgit.com/tonystar/bootstrap-float-label/v4.0.0/dist/bootstrap-float-label.min.css"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.4.1/css/swiper.min.css">
-
+    <link rel="stylesheet" href="/css/app.css">
   <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -57,17 +57,18 @@
       <script>
         $(document).ready(function() {
           $('.has-children').hover(function(){
-              $('.overlay').addClass('is-visible');
+              $('.overlay-lg').addClass('is-visible');
           },
           function(){
-              $('.overlay').removeClass('is-visible');
+              $('.overlay-lg').removeClass('is-visible');
           });
-          //nav slider
-          var next = document.getElementsByClassName("swiper-button-next")[0];
-      		var prev = document.getElementsByClassName("swiper-button-prev")[0];
-          document.getElementsByClassName("slider-nav-container")[0].appendChild(next);
-      		document.getElementsByClassName("slider-nav-container")[0].appendChild(prev);
-        });
+
+          $(".has-children").click(function() {
+            $('.cd-primary-nav').animate({
+                scrollTop: $(".nav-is-visible").offset().top},
+                '200');
+              });
+          });
 
       </script>
 </body>
