--- a/public/index.html
+++ b/public/index.html
@@ -50,6 +50,7 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
       <script src="/js/jquery-3.3.1.min.js"></script>
+      <script src="https://code.jquery.com/jquery-migrate-3.0.1.min.js"></script>
       <script src="/js/jquery.mobile.custom.min.js"></script>
       <script src="/js/popper.min.js"></script>
       <script src="/js/bootstrap.min.js"></script>
