fix sideBar arrow, productDetail data coming from the server, and renamed params

--- a/public/index.html
+++ b/public/index.html
@@ -62,7 +62,7 @@
               $('.overlay-lg').removeClass('is-visible');
           });
 
-          $(".has-children").click(function() {
+          $(".cd-primary-nav li").click(function() {
             $('.cd-primary-nav').animate({
                 scrollTop: $(".nav-is-visible").offset().top},
                 '200');
