--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
     crossorigin="anonymous"></script>
     <link rel="stylesheet" href="/css/mega-nav.css"> <!--Mega Nav Resource style -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.4.1/css/swiper.min.css">
-    <!-- <link rel="stylesheet" href="/css/main/main.css"> -->
+    <link rel="stylesheet" href="/css/main/main.css">
 
   <title>Q Parts</title>
     <!-- Google Tag Manager -->
